--- a/angular.json
+++ b/angular.json
@@ -98,13 +98,15 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/app/108.png"
+              "src/assets/img"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/home.component.js"
+            ]
           }
         }
       }
